[gd_scene load_steps=7 format=2]

[ext_resource path="res://Code/Coin.gd" type="Script" id=1]
[ext_resource path="res://Scenes/coin_particles.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/particles/coin_particle.png" type="Texture" id=3]
[ext_resource path="res://Art/Pickupables/Coins.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 24 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.64
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.15, 0.24, 0.32, 0.4, 0.48, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="Coin" type="Area2D"]
script = ExtResource( 1 )

[node name="coin_particles" parent="." instance=ExtResource( 2 )]
emitting = false
one_shot = true
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
z_index = -2
texture = ExtResource( 4 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
